@@ -881,20 +881,19 @@ class CTrigger extends CTriggerGeneral {
 			'value' => $triggerIds
 		));
 
-		// unlink triggers from IT services
-		foreach ($triggerIds as $triggerId) {
-			updateServices($triggerId, SERVICE_STATUS_OK);
-		}
+		if ($this->usedInItServices($triggerIds)) {
+			DB::update('services', array(
+				'values' => array(
+					'triggerid' => null,
+					'showsla' => SERVICE_SHOW_SLA_OFF
+				),
+				'where' => array(
+					'triggerid' => $triggerIds
+				)
+			));
 
-		DB::update('services', array(
-			'values' => array(
-				'triggerid' => null,
-				'showsla' => SERVICE_SHOW_SLA_OFF
-			),
-			'where' => array(
-				'triggerid' => $triggerIds
-			)
-		));
+			updateItServices();
+		}
 
 		parent::deleteByIds($triggerIds);
 	}
@@ -1113,8 +1112,10 @@ class CTrigger extends CTriggerGeneral {
 		$triggers = zbx_toArray($triggers);
 		$infos = array();
 
+		$triggerIds = zbx_objectValues($triggers, 'triggerid');
+
 		$dbTriggers = $this->get(array(
-			'triggerids' => zbx_objectValues($triggers, 'triggerid'),
+			'triggerids' => $triggerIds,
 			'output' => API_OUTPUT_EXTEND,
 			'selectHosts' => array('name'),
 			'selectDependencies' => array('triggerid'),
@@ -1122,7 +1123,10 @@ class CTrigger extends CTriggerGeneral {
 			'nopermissions' => true
 		));
 
-		$descriptionChanged = $expressionChanged = false;
+		$descriptionChanged = false;
+		$expressionChanged = false;
+		$changedPriorityTriggerIds = array();
+
 		foreach ($triggers as &$trigger) {
 			$dbTrigger = $dbTriggers[$trigger['triggerid']];
 			$hosts = zbx_objectValues($dbTrigger['hosts'], 'name');
@@ -1228,9 +1232,7 @@ class CTrigger extends CTriggerGeneral {
 
 			// update service status
 			if (isset($trigger['priority']) && $trigger['priority'] != $dbTrigger['priority']) {
-				$serviceStatus = ($dbTrigger['value'] == TRIGGER_VALUE_TRUE) ? $trigger['priority'] : 0;
-
-				updateServices($trigger['triggerid'], $serviceStatus);
+				$changedPriorityTriggerIds[] = $trigger['triggerid'];
 			}
 
 			// restore the full expression to properly validate dependencies
@@ -1241,6 +1243,10 @@ class CTrigger extends CTriggerGeneral {
 					$dbTrigger['description'], null, $dbTrigger, $triggerUpdate);
 		}
 		unset($trigger);
+
+		if ($changedPriorityTriggerIds && $this->usedInItServices($changedPriorityTriggerIds)) {
+			updateItServices();
+		}
 
 		foreach ($infos as $info) {
 			info($info);
@@ -1954,5 +1960,18 @@ class CTrigger extends CTriggerGeneral {
 		}
 
 		return $triggers;
+	}
+
+	/**
+	 * Returns true if at least one of the given triggers is used in IT services.
+	 *
+	 * @param array $triggerIds
+	 *
+	 * @return bool
+	 */
+	protected function usedInItServices(array $triggerIds) {
+		$query = DBselect('SELECT serviceid FROM services WHERE '.dbConditionInt('triggerid', $triggerIds), 1);
+
+		return (DBfetch($query) != false);
 	}
 }
